style.css
body {
    font-family: 'EB Garamond', serif;
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    scroll-behavior: smooth;
}

header {
    position: relative;
}

.navbar {
    position: fixed;
    z-index: 100; 
    width: 100%;
    top: 0;
    display: flex;
    justify-content: space-around;
    background-color:rgba(51, 51, 51, 0.70) 
}

.navbar ul {
    list-style-type: none;
    padding: 0;
    margin: 0;
    display: flex;
    justify-content: center     ;
}

.navbar ul li a {
    display: block;
    color: white;
    /* font-weight: bold; */
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    margin: 10px; 
    border-radius: 10px; 
    transition: all 0.2s ease-in-out;
}

.navbar ul li a:hover {
    background-color:rgba(255, 255, 255, 0.2);
    color: black;
}

.social-links {
    display: flex;
    align-items: center;
}

.social-icon {
    height: 24px; 
    width: auto;
    margin-left: 10px; 
}
.navbar .social-links {
    margin-left:0%;
}

.navbar.solid-background {
    background-color: rgba(51, 51, 51, 1); 
}

.background-image {
    background-image: url('images/bg.jpg'); 
    height: 75vh;
    background-size: cover;
    max-width: 100%;
    background-position: center;
    display: flex;
    justify-content: space-between; 
    align-items: center;
    text-align: left;
}

.welcome-text,
.profile-container {
    color: white;
    flex: 1; 
    font-size: large;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
}

.welcome-text {
    padding-left: 5%; 
    margin-left: 100px;
}

.welcome-text h1 {
    margin-bottom: 20px; 
}

.welcome-text p {
    margin-top: 0; 
}

.profile-container img {
    margin-top: 10%;
    max-height: 60vh;
    max-width: 100%; 
    height: auto; 
    border-radius: 100%; 
    object-fit: cover; 
    margin-left: 60px;
}



.bio {
    text-align: center;
    padding-left: 200px;
    padding-right: 200px;
    font-size: larger;
}

.highlights {
    text-align: center;
    font-size: larger;
    padding: 10px 20px 20px 20px;
}

.highlights h1 {
    margin-bottom: 30px;
    font-size: 2em;
}

.card-container {
    display: flex;
    justify-content: space-around;
    flex-wrap: wrap;
    gap: 20px; /* Adds space between the cards */
}

.card {
    background: #fff;
    border-radius: 10px;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
    overflow: hidden; 
    width: 300px;
    margin-bottom: 20px;
    display: flex;
    flex-direction: column;
    justify-content: space-between; 
    height: 550px; 
}

.card img {
    width: 100%; 
    height: 400px; 
    max-height: 225px;
    object-fit: contain;
    align-items: center;
    background-color: white;
}

.card-content {
    padding: 20px;
    flex: 1;
    display: flex;
    flex-direction: column; 
}
.card:hover {
    transform: scale(1.05);
    transition: all 0.2s ease-in-out;
    background-color:rgba(51, 51, 51, 0.30);
}

.card-content h3 {
    margin-top: 0;
}

.card-content p {
    font-size: 1em;
    flex-grow: 1; 
    /* height: 60px; */
}

.btn {
    background: rgba(51, 51, 51, 1);
    color: white;
    text-decoration: none;
    padding: 10px 20px;
    display: inline-block;
    border-radius: 5px;
    margin-top: 15px;
}

.btn:hover {
    background: #304d6d;
}

.background-image-intern {
    background-image: url('images/bg5.jpeg'); 
    height: 75vh;
    background-size: cover;
    background-position: center;
    display: flex;
    justify-content: space-between; 
    align-items: center;
    text-align: left;
}

.background-image-research {
    background-image: url('images/bg2.jpeg'); 
    height: 75vh;
    max-width: 100%;
    background-size: cover;
    background-position: center;
    display: flex;
    justify-content: space-between; 
    align-items: center;
    text-align: left;
}

.background-image-project {
    background-image: url('images/bg3.jpeg'); 
    height: 75vh;
    background-size: cover;
    background-position: center;
    display: flex;
    justify-content: space-between; 
    align-items: center;
    text-align: left;
}

.background-image-campus {
    background-image: url('images/bg4.webp'); 
    height: 75vh;
    background-size: cover;
    background-position: center;
    display: flex;
    justify-content: space-between; 
    align-items: center;
    text-align: left;
}

.subpage-welcome-text {
    color: white;
    flex: 1; 
    font-size: large;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    padding-left: 5%; 
    margin-left: 100px;
    padding-right: 5%; 
    margin-right: 100px;
}

.subpage-welcome-text h1 {
    margin-bottom: 20px; 
}

.subpage-welcome-text p {
    margin-top: 0; 
}

footer {
    background-color: rgba(51, 51, 51, 0.1);
    text-align: center;
    padding: 10px 0; 
    display: flex;
    justify-content: space-between; 
    align-items: center;
}

footer p {
    margin: 0; 
}

.footer-links a {
    color: black; 
    margin: 0 15px; 
    font-size: 20px; 
}

.footer-links {
    display: flex;
    align-items: center;
    margin-right: 50px;
}
.footer-text {
    display: flex;
    align-items: center;
    margin-left: 100px;
}
.subpage-experiences {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 20px;
}

.subpage-card {
    background: #fff;
    border-radius: 10px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    margin: 20px;
    display: flex;
    align-items: center; 
    justify-content: space-between;
    padding: 20px;
    width: 80%;
    max-width: 1000px;
    cursor: pointer; 
    overflow: hidden; 
    transition: max-height 4.5s ease-in-out;
    position: relative;
}

.subpage-card .more-info {
    display: none; 
    margin-top: 50px;
}

.subpage-card:hover{
    transform: scale(1.05);
    transition: all 0.4s ease-in-out;
    border: 2px solid rgba(51, 51, 51, 0.80);
}

.subpage-card.expanded .more-info {
    display: block; 
}

.subpage-card.expanded {
    max-height: 10000px; 
    transition: max-height 2.5s ease-in-out;
}

.subpage-description {
    flex: 1; 
}
.company-logo {
    height: 150px; 
    width: auto; 
    margin-left: 20px;
    margin-right: 20px;
}
.subpage-card h2 {
    color: #333;
    margin: 0;
}

.subpage-card h3 {
    color: #555;
    margin-top: 5px;
}

.activity-duration {
    font-style: italic;
    color: #777;
    margin-bottom: 0px;
}


@media (max-width: 768px) {
    .navbar {
        padding: 0px 0;
    }

    .navbar ul li a {
        padding: 6px 8px; 
        font-size: 0.5em; 
        margin: 1px; 
    }
    .welcome-text, .subpage-welcome-text {
        padding-left: 10px;
        margin-left: 0;
        padding-right: 10px;
        margin-right: 0;
        text-align: center;
    }

    .navbar .social-links i {
        font-size: 15px;
        margin-right: 2px; 
        margin-left: 2px;
    }


    .bio, .highlights {
        padding-left: 20px;
        padding-right: 20px;
    }

    .card-container {
        flex-direction: column;
        align-items: center;
    }

    .card {
        width: 90%;
    }

    .background-image,
    .background-image-intern,
    .background-image-research,
    .background-image-project,
    .background-image-campus {
        height: 50vh;
        background-position: top;
    }

    .profile-container img {
        margin-left: 10px;
        margin-top: 20%;
    }

    .subpage-experiences .subpage-card {
        flex-direction: column;
        width: 90%;
    }

    .subpage-description, .company-logo, .research-image, .project-image, .campus-image {
        margin-left: 10px;
        margin-right: 10px;
    }
}

.arrow-down-icon {
    display: block;
    position: absolute;
    bottom: 10px;
    left: 50%;
    transform: translateX(-50%);
    font-size: 20px;
    color: rgba(51, 51, 51, 0.7);
}

.subpage-card.expanded .arrow-down-icon {
    display: none;
}

.arrow-up-icon {
    display: block;
    position: absolute;
    bottom: 10px;
    left: 50%;
    transform: translateX(-50%);
    font-size: 20px;
    color: white;
}
.subpage-card.expanded .arrow-up-icon {
    display: block;
    position: absolute;
    bottom: 10px;
    left: 50%;
    transform: translateX(-50%);
    font-size: 20px;
    color: rgba(51, 51, 51, 0.7);
}

.research-image{
    height: 200px; 
    width: auto; 
    margin-left: 20px;
    margin-right: 20px;
}

.view-project-btn {
    display: inline-block;
    background-color: rgba(51, 51, 51, 1); 
    color: white; 
    padding: 10px 20px;
    margin-top: 15px; 
    text-decoration: none; 
    border-radius: 5px; 
    text-align: center; 
    transition: background-color 0.2s ease-in-out; 
}

.view-project-btn:hover {
    background-color: #304d6d; 
}

.project-image{
    height: 200px; 
    width: auto; 
    margin-left: 20px;
    margin-right: 20px;
}

.campus-image{
    object-fit: contain;
    width: 200px;
    height:100%;
    margin-left: 20px;
    margin-right: 20px;
}

